[tool.poetry]
name = "preprosessing"
version = "0.1.0"
description = "Apach"
authors = ["Kohei Miki"]
readme = "README.md"
keywords = [
    "Python"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: Flake8",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
jupyterlab = "^3.6.3"
transformers = "^4.29.1"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.10
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
